Opened 5 years ago

Closed 4 years ago

#15709 closed bug (fixed)

[DeskCalc] some localized buttons stopped working (regression)

Reported by: diver Owned by: stippi
Priority: normal Milestone: R1/beta4
Component: Applications/DeskCalc Version: R1/Development
Keywords: localization Cc:
Blocked By: Blocking:
Platform: All

Description

It looks like hrev53649 broke something in DeskCalc.

For example in Russian locale "*" label disappeared and pressing "=" sometimes causes "Unexpected character at 3" message.

Change History (5)

comment:1 by pulkomandy, 5 years ago

How was it translated? For example was * replaced with the more appropriate unicode multiplication symbol?

I suspect it uses characters which are in the "Noto symbols" font and our font overlay system is still broken but no one seems to care (leading to missing the enter key symbol for example in Keymap and in menu shortcuts, etc)

comment:3 by diver, 5 years ago

Keywords: localization added

comment:4 by pulkomandy, 4 years ago

Milestone: UnscheduledR1/beta4

French translation is now victim of this too and I see what happens.

The buttons labels are translated. When the button is pressed, the same (translated) text is inserted in the deskcalc expression. But the parser isn't aware of these translated names, so it doesn't work.

Typing the right text manually (sqrt(), ceil(), ...) works fine.

comment:5 by pulkomandy, 4 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev55261.

Note: See TracTickets for help on using tickets.