DeskCalc: fix mixup of key codes and labels

We must keep an untranslated version of the text for use with the
expression parser. Only the key label in the user interface should be
translated.

Fixes #15709.